--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>My Portfolio</h1>
-						<p>Panagiotis Vasdekis &nbsp;&bull;&nbsp; Computer Science and Engineer Student @ University of Ioannina</p>
+						<p>Panagiotis Vasdekis &nbsp;&bull;&nbsp; Junior Software Engineer @ Ontovisual</p>
 						<nav>
 							<ul>
 								<li>LinkedIn<a href="https://www.linkedin.com/in/panagiotis-vasdekis-ab2112266/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
